# LangChain_RAG

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/config/: config.yaml  settings.py
app/indexing/: indexing.py
app/ingest/: embeddings.py  loader.py  splitter.py
app/rag/: chain.py
app/retriever/: retrieval.py
app/schemas/: schemas.py
app/vectorstore/: store_factory.py
